// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: covered 1`] = `
<td
  className="source-meta source-line-coverage source-line-covered"
  data-line-number={3}
>
  <Tooltip
    overlay="source_viewer.tooltip.covered"
    placement="bottom"
  >
    <div
      aria-label="source_viewer.tooltip.covered"
      className="source-line-bar"
    />
  </Tooltip>
</td>
`;

exports[`should render correctly: no data 1`] = `
<td
  className="source-meta source-line-coverage"
  data-line-number={3}
>
  <Tooltip
    placement="bottom"
  >
    <div
      className="source-line-bar"
    />
  </Tooltip>
</td>
`;

exports[`should render correctly: partially covered, 0 conditions 1`] = `
<td
  className="source-meta source-line-coverage source-line-partially-covered"
  data-line-number={3}
>
  <Tooltip
    overlay="source_viewer.tooltip.partially-covered"
    placement="bottom"
  >
    <div
      aria-label="source_viewer.tooltip.partially-covered"
      className="source-line-bar"
    />
  </Tooltip>
</td>
`;

exports[`should render correctly: partially covered, 10 conditions 1`] = `
<td
  className="source-meta source-line-coverage source-line-partially-covered"
  data-line-number={3}
>
  <Tooltip
    overlay="source_viewer.tooltip.partially-covered"
    placement="bottom"
  >
    <div
      aria-label="source_viewer.tooltip.partially-covered"
      className="source-line-bar"
    />
  </Tooltip>
</td>
`;

exports[`should render correctly: uncovered 1`] = `
<td
  className="source-meta source-line-coverage source-line-uncovered"
  data-line-number={3}
>
  <Tooltip
    overlay="source_viewer.tooltip.uncovered"
    placement="bottom"
  >
    <div
      aria-label="source_viewer.tooltip.uncovered"
      className="source-line-bar"
    />
  </Tooltip>
</td>
`;
